# spark-learning-lab

./: .gitignore  ARCHITECTURE.md  BOOK_MAP.md  CONTRIBUTING.md  CONVENTIONS.md  INTERVIEW_BANK.md  LEARNING_STRATEGY.md  LICENSE  Makefile  PROJECT_INDEX.md  README.md  RESOURCE_MAP.md  ROADMAP.md  TROUBLESHOOTING.md  requirements.txt
00_setup/: 01-what-is-spark.md  02-architecture-overview.md  03-local-setup.md  04-databricks-community.md  05-first-pyspark-program.md  README.md  local_spark_setup.md
01_fundamentals/: 01-cluster-architecture-deep-dive.md  02-job-stage-task.md  03-rdds-explained.md  04-dataframes-vs-rdds.md  05-lazy-evaluation-and-dag.md  06-narrow-vs-wide-transformations.md  07-actions-vs-transformations.md  README.md
02_pyspark_core/: 01-spark-session.md  02-reading-data.md  03-writing-data.md  04-schemas-and-types.md  05-columns-and-expressions.md  06-built-in-functions.md  07-aggregations.md  08-joins-deep-dive.md  09-window-functions.md  10-spark-sql.md  11-udfs-and-pandas-udfs.md  README.md
03_optimization/: 01-catalyst.md  02-tungsten.md  03-reading-plans.md  04-aqe.md  05-partitioning-strategies.md  06-caching-and-persistence.md  07-shuffle-tuning.md  08-skew-handling.md  09-broadcast-joins.md  10-memory-tuning.md  11-spark-ui-tour.md  (+2 more)
06_real_projects/orders-etl/: README.md  pyproject.toml
06_real_projects/orders-etl/exercises/: README.md
06_real_projects/orders-etl/src/orders_etl/: config.py  schemas.py  session.py
06_real_projects/orders-etl/src/orders_etl/jobs/: 01_ingest_bronze.py  02_build_silver.py  03_build_gold.py  gen_data.py
(+158 files in other folders)
